--- a/index.html
+++ b/index.html
@@ -12,88 +12,120 @@
          h2 {
              color: #000000;
              font-size: 25px;
+             letter-spacing: 5px;
+             margin: 15px 0 10px 10px;
          }
          h6 {
              font-weight: lighter;
              margin: 0 0 200px 0;
          }
-         .menu {
-            width: 650px;
-            height: 150px;
-         }
-         #main {
-             
-         }
          #profile {
             background-image: url("img/profile_re.jpg");
             background-repeat: no-repeat;
-            margin: 0 0 50px 0;
+            width: 650px;
+            height: 160px;
+            margin: 50px 0 50px 0;
             object-position: none;
-            font-size: 8pt;
-            line-height: 5px; 
+         }
+         #profile_text {
             color: #000000;
+            font-size: 8pt;
+            text-align: right;
+            margin: 10px 10px 0 5px;
+            line-height: 1.0;
          }
          #biography {
             background-image: url("img/biography_re.jpg");
             background-repeat: no-repeat;
+            width: 650px;
+            height: 160px;
             margin: 0 0 50px 0;
             object-position: none;
-            font-size: 8pt;
-            line-height: 5px; 
-            color: #ffffff;
          }
+         #biography_text {
+            color: #ffffff;
+            font-size: 8pt;
+            text-align: left; 
+            display: table-cell;
+            vertical-align: bottom;
+            margin: 30px 0 0 10px;
+            line-height: 1.0;
+         }   
          #skill {
             background-image: url("img/skill_re.jpg");
             background-repeat: no-repeat;
-            margin: 0 0 50px 0;
+            width: 650px;
+            height: 160px;
+            margin: 0 0 30px 0;
             object-position: none;
-            font-size: 8pt;
-            line-height: 5px; 
+         }
+         #skill_text {
             color: #000000;
+            font-size: 8pt;
+            text-align: right;
+            margin: 20px 10px 0 5px;
+            line-height: 1.0;
+         }
+         #article-info {
+             font-size: 23px;
+             margin: 0 0 30px 0;
          }
          body {
              background-color: #f6f4f3;
-             margin-left: 120px;
+             width: 750px;
+             margin-left: auto;
+             margin-right: auto;
          }
          footer {
-             margin: 200px 0 0 0;
+             margin: 150px 0 0 0;
              font-size: small;
          }
      </style>
     </head>
     <body>
-     <div class="main">
+     <div class="Main">
          <h1>MYNAMEIS.MOE</h1>    
          <h6>PORTFORIO OF MOE KAWASHIMA</h6>
      </div> 
-     <div class="menu" id="profile">
-         <h2>Profile</h2>
-         <p>Name 川島 萌衣</p>
-         <p>Birthday 1999.12.29</p>
-         <p>Hometown 栃木県</p>
-         <p>Hobby 写真。絵。LIVEに行くこと。</p>
+     <div id="profile">
+         <div id="profile_text">
+          <h2>Profile</h2>
+          <p>Name  川島 萌衣</p>
+          <p>Birthday  1999.12.29</p>
+          <p>Hometown  栃木県</p>
+          <p>Hobby  写真。絵。LIVEに行くこと。</p>
+         </div>
      </div>
-     <div class="menu" id="biography">
-         <p>2018年、栃木県立佐野高等学校を卒業。</p>
-         <p>2020年、足利デザインビューティ専門学校を卒業。</p> 
-         <p>グラフィックデザインを学ぶ。</p>
-         <h2>Biography</h2>
+     <div id="biography">
+         <div id="biography_text">
+          <p>2018年、栃木県立佐野高等学校を卒業。</p>
+          <p>2020年、足利デザインビューティ専門学校を卒業。</p> 
+          <p>グラフィックデザインを学ぶ。</p>
+          <h2>Biography</h2>
+         </div>
      </div>
-     <div class="menu" id="skill">
-         <p>DTP検定ディレクション</p>
-         <p>Webクリエイター能力認定試験(HTML5)</p>
-         <p>Photoshopクリエイター能力認定試験スタンダード</p>
-         <p>Illustratorクリエイター能力認定試験スタンダード</p>
-         <p>Word文書処理技能認定試験</p>
-         <h2>Skill</h2>
+     <div id="skill"> 
+         <div id="skill_text">
+          <p>DTP検定ディレクション</p>
+          <p>Webクリエイター能力認定試験(HTML5)</p>
+          <p>Photoshopクリエイター能力認定試験スタンダード</p>
+          <p>Illustratorクリエイター能力認定試験スタンダード</p>
+          <p>Word文書処理技能認定試験</p>
+          <h2>Skill</h2>
+         </div>
      </div>
      <article>
-         <p>AND MORE INFO</p>
+         <p id="article-info">AND MORE INFO</p>
          <p>御用のある方はこちらまで</p>
          <p>moe.kawashima@force-corp.co.jp</p>
      </article> 
      <footer>
          ©MYNAMEIS.MOE
      </footer>
+     <script>
+         'use strict'
+
+
+     </script>
     </body>
 </html>
