--- a/img/button.html
+++ b/img/button.html
@@ -6,6 +6,13 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>MYNAMEIS.MOE</title>
         <style type="text/css">
+         h2 {
+            color: #000000;
+            font-size: 25px;
+            letter-spacing: 5px;
+            margin: 15px 0 10px 10px;
+         }
+
         ul {
             list-style: none;
         }
@@ -20,16 +27,16 @@
             overflow: visible;
             line-height: 0;
             cursor: pointer;
+            font-size: 8pt;
+            text-align: right;
+            position: absolute;
+            line-height: 1.0;
         }
          #toggeleMenu1{
              overflow: hidden;
              transition: all 0.5s;
              background-color: #000000;
              opacity: 0.8;
-             font-size: 8pt;
-             text-align: right;
-             margin: 10px 10px 0 5px;
-             line-height: 1.0;
          }
         </style>
     </head>
