--- a/img/button copy.html
+++ b/img/button copy.html
@@ -31,13 +31,21 @@
          }
          .profile-show {
             background-color: #000000;
-            opacity: 0.5;
+            opacity: 0.7;
             height: 160px !important;
             overflow-y: auto;
             transition: .6s;
          }
+         .biography-show {
+            height: 160px !important;
+            overflow-y: auto;
+         }
+         .skill-show {
+            height: 160px !important;
+            overflow-y: auto;
+         }
          #profile_text {
-            color: #000000;
+            color: #ffffff;
             font-size: 8pt;
             text-align: right;
             margin: 10px 10px 0 5px;
@@ -54,12 +62,6 @@
             cursor: pointer;
             transition: .6s;
          }
-         .biography-show {
-            background-color: #000000;
-            opacity: 0.5;
-            height: 160px !important;
-            overflow-y: auto;
-         }  
          #biography_text {
             color: #FFFFFF;
             font-size: 8pt;
@@ -68,7 +70,7 @@
             vertical-align: bottom;
             margin: 30px 0 0 10px;
             line-height: 1.0;
-         } 
+         }   
          #skill {
             background-image: url('img/skill_re.jpg');
             background-repeat: no-repeat;
@@ -80,12 +82,6 @@
             cursor: pointer;
             transition: .6s;
          }
-         .skill-show {
-            background-color: #000000;
-            opacity: 0.5;
-            height: 160px !important;
-            overflow-y: auto;
-         }
          #skill_text {
             color: #000000;
             font-size: 8pt;
@@ -94,7 +90,7 @@
             line-height: 1.0;
          }
          #article-info {
-             font-size: 20px;
+             font-size: 23px;
              margin: 0 0 30px 0;
          }
          body {
@@ -115,7 +111,7 @@
          <h6>PORTFORIO OF MOE KAWASHIMA</h6>
      </div> 
      <div id="profile">
-         <div  id="profile_text">
+         <div id="profile_text">
           <h2>Profile</h2>
           <p>Name  川島 萌衣</p>
           <p>Birthday  1999.12.29</p>
@@ -151,8 +147,6 @@
      </footer>
      <script>
        'use strict'
-
-    // アコーディオンメニュー　　　
       const profile = document.getElementById('profile');
       profile.addEventListener('click', () => {
         profile.classList.toggle('profile-show');
